--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    {
+        "name": "Launch Chrome",
+        "request": "launch",
+        "type": "pwa-chrome",
+        "url": "http://localhost:8080",
+        "webRoot": "${workspaceFolder}"
+    },
         {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "StoreData.py",
+            "program": "LivePredictRF.py",
             "console": "integratedTerminal"
         }
     ]
